# shp_to_3dtiles

./: Cargo.toml  README.md
b3dm/: tileset.json
src/: b3dm.rs  glb.rs  main.rs  mesh.rs  shptiff.rs  tileset.rs
